--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,22 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/4a7285c2e5.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>Hello</h1>
-    <div></div>
+    <div class="link-box">
+
+      <div>
+        <i class="fa-brands fa-facebook"></i>
+        <a href="url">Facebook</a>
+      </div>
+
+      <div>
+        <i class="fa-brands fa-twitter"></i>
+        <a href="url">Twitter</a>
+      </div>
+
+    </div>
   </body>
 </html>
