--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/4a7285c2e5.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Welcome!</h1>
     <div class="link-box">
 
-      <div>
-        <i class="fa-brands fa-facebook"></i>
-        <a href="url">Facebook</a>
-      </div>
+      <a href="url">
+        <div class="link">
+          <i class="fa-brands fa-facebook"></i>
+          <span>Facebook</span>
+        </div>
+      </a>
 
-      <div>
-        <i class="fa-brands fa-twitter"></i>
-        <a href="url">Twitter</a>
-      </div>
+      <a href="url">
+        <div class="link">
+          <i class="fa-brands fa-twitter"></i>
+          <span>Twitter</span>
+        </div>
+      </a>
 
     </div>
   </body>
