added more social links

--- a/public/index.html
+++ b/public/index.html
@@ -13,23 +13,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <div class="link-box">
+    <div class='app'>
 
-      <a href="url">
-        <div class="link">
-          <i class="fa-brands fa-facebook"></i>
-          <span>Facebook</span>
-        </div>
-      </a>
+      <div class="link-box">
+        <h1>Welcome!</h1>
 
-      <a href="url">
-        <div class="link">
-          <i class="fa-brands fa-twitter"></i>
-          <span>Twitter</span>
-        </div>
-      </a>
+        <a href="url">
+          <div class="link">
+            <i class="fa-brands fa-facebook"></i>
+            <span>Facebook</span>
+          </div>
+        </a>
 
+        <a href="url">
+          <div class="link">
+            <i class="fa-brands fa-twitter"></i>
+            <span>Twitter</span>
+          </div>
+        </a>
+
+        <a href="url">
+          <div class="link">
+            <i class="fa-brands fa-medium"></i>
+            <span>Medium</span>
+          </div>
+        </a>
+
+        <a href="url">
+          <div class="link">
+            <i class="fa-brands fa-twitch"></i>
+            <span>Twitch</span>
+          </div>
+        </a>
+
+        <a href="url">
+          <div class="link">
+            <i class="fa-brands fa-instagram"></i>
+            <span>Instagram</span>
+          </div>
+        </a>
+
+      </div>
     </div>
   </body>
 </html>
