pushing changes from iPad

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class='app'>
-
+    
       <div class="link-box">
         <h1>Welcome!</h1>
 
@@ -55,5 +55,7 @@
 
       </div>
     </div>
+    <script src="bundle.js"></script>
+    <div class="app"></div>
   </body>
 </html>
